# finding_fifa_players_rating

./: database.py  ea_fc_weights_optimization_report.ipynb  main.py  optimization.py  optimizations.json  pyproject.toml  shared_types.py  weights.csv
